[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/jetbrains_mono_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/audio/game_over.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/game_end/game_end.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/game_win.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[node name="GameEnd" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0639648
margin_bottom = -0.200012
color = Color( 0, 0, 0, 0.235294 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.349
anchor_right = 0.5
anchor_bottom = 0.349
margin_left = -117.0
margin_top = -29.4
margin_right = 117.0
margin_bottom = 29.6
custom_fonts/font = SubResource( 1 )
text = "you win"
align = 1

[node name="FinalScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.416
margin_top = -10.8
margin_right = 59.584
margin_bottom = 11.2
custom_fonts/font = SubResource( 2 )
text = "final score:"

[node name="FinalScoreTextLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.579
anchor_right = 0.5
anchor_bottom = 0.579
margin_left = -20.48
margin_top = -28.2
margin_right = 19.52
margin_bottom = -14.2
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.717
anchor_right = 0.5
anchor_bottom = 0.717
margin_left = -43.0081
margin_top = -10.2
margin_right = -31.0081
margin_bottom = 9.79999
text = "main menu"

[node name="GameOverAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="GameWinAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
